<resources>
    <string name="app_name">وجبتي</string>
    <string name="next">التالي</string>
    <string name="skip">تخطي</string>
    <string name="text_1">اطلب وجبتك واستلمها بسرعة</string>
    <string name="text_2">يتمتع  موقعنا بتقديم افضل الوجبات </string>
    <string name="text_3">   يمكنكم طلب وجبتكم المفضلة  \n من تطبيق وجبتي  </string>
    <string name="login">تسجيل الدخول</string>
    <string name="userName">اسم المستخدم</string>
    <string name="pass">كلمة المرور</string>
    <string name="forget_pass">هل نسيت كلمة المرور ؟</string>
    <string name="tv_regester_1">ليس لديك حساب؟</string>
    <string name="tv_regester_2">إنشاء حساب جديد</string>
    <string name="regester">إنشاء حساب </string>
    <string name="reset_pass">تأكيد كلمة المرور</string>
    <string name="phone">رقم  الجوال</string>
    <string name="tv_login_1">لديك حساب؟</string>
    <string name="tv_login_2">سجل الدخول</string>
    <string name="home">الرئسية</string>
    <string name="buy">السلة</string>
    <string name="heart">المفضلة</string>
    <string name="user">الملف الشخصي</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">بحث</string>
    <string name="category">لأصناف</string>
    <string name="kake">الحلويات</string>
    <string name="bar">المشروبات</string>
    <string name="lunch">الوجبات</string>
    <string name="path">سندوشات</string>
    <string name="order">الاكثر طلبا</string>
</resources>