<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound"
    tools:context=".HomeFragment">

    <EditText
        android:id="@+id/ed_search"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/view_shape"
        android:drawableEnd="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:hint="@string/search"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/im_noti"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_noti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:background="@drawable/view_shape"
        android:padding="16dp"
        android:src="@drawable/ic_notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ed_search" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="133dp"
        android:layout_marginTop="26dp"
        app:cardCornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="@id/ed_search"
        app:layout_constraintStart_toStartOf="@id/im_noti"
        app:layout_constraintTop_toBottomOf="@id/ed_search">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pizza" />
    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/im_dote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:src="@drawable/group"

        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <TextView
        android:id="@+id/tv_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/im_dote" />


    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/tv_cat">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/view_shape"
            android:drawableTop="@drawable/ic_lunch"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/lunch" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/view_shape"
            android:drawableTop="@drawable/ic_local_bar"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/view_shape"
            android:drawableTop="@drawable/ic_cake"

            android:gravity="center"
            android:padding="10dp"
            android:text="@string/kake" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/view_shape"
            android:drawableTop="@drawable/ic_path"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/path" />


    </LinearLayout>


    <TextView
        android:id="@+id/tv_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/order"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/layout" />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/tv_order"
        app:spanCount="2" />
</androidx.constraintlayout.widget.ConstraintLayout>